# Solana-Co-learning-notes

./: Cargo.toml  README.md  drafe_course.md  how-to-setting-solana-front.md
contract/hello/: Cargo.toml
contract/hello_anchor/: Anchor.toml
docs/anatoly_yakovenko/: loom_encoding_time_as_data.md  proof_of_history_a_clock_for_blockchain.md
docs/offical/: rust-program-quickstart.md
docs/problems/: problems.md
docs/squads/: what-is-svm.md
module1/build-a-movie-review-app/: README.md
module1/build-an-interaction-script/: README.md  package-lock.json  package.json
module1/build-an-nft-minter-front-end/: README.md
module1/connecting-to-wallet/: README.md
module1/custom-instructions/: README.md
module1/deploy-to-vercel/: README.md
module1/interact-with-a-program/: README.md
module1/read-data-from-the-solana-network/: README.md  package-lock.json  package.json
module1/run-it-back-deserialization/: README.md
module1/solana-intro-client/: .env  package-lock.json  package.json
module1/solana-intro-frontend/: package-lock.json  package.json
module1/solana-movie-frontend/: package-lock.json
module1/solana-ping-client/: package-lock.json  package.json
module1/solana-ping-frontend/: package-lock.json
module1/solana-send-sol-frontend/: package-lock.json  package.json
module1/solana-student-intros-frontend/: package-lock.json
module1/write-data-to-the-blockchain/: .env  README.md  package-lock.json  package.json  tsconfig.json
module4/: local_program_development.md  pda.md
tools/solts/: Cargo.toml  README.md
tools/solts/src/: main.rs
(+85 files in other folders)
