[workspace]
members = [
    "tools/*",
    "docs/code/*",
    "module3/contract/hello-world",
    "module3/contract/hello-world-anchor/programs/hello-world-anchor",
    "module3/contract/movies",
    "module3/contract/notes",
]

resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
