[workspace]
members = [
    "tools/*",
    "docs/code/*",
    "module3/app/hello/contract",
    "module3/app/movies/contract",
    "module3/app/notes/contract",
]

resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
