[package]
name = "solts"
version = "0.1.0"
edition = "2021"
description = "A tools focus on blockchain, for example solana ecosystem"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
regex = "1"
colored = "1"
